# PAZULE_AGENT

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_SPEC.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  git_merge.ps1  main.py  pyproject.toml  requirements.txt  run.py  run_cli.py
.github/workflows/: cd.yml  ci.yml
app/: README.md
app/api/: admin_routes.py  routes.py  user_routes.py
app/core/: config.py  hints.py  keyword.py  utils.py
app/core/config/: README.md  __init__.py  constants.py  environments.py  settings.py
app/council/: agents.py  aggregator.py  deliberation.py  graph.py  judges.py  nodes.py  state.py
app/db/: __init__.py  models.py  repositories.py  session.py  utils.py
app/docs_audit/: audit.py  cli.py
app/legacy/: mission_service.py
app/legacy/docs_audit/: __init__.py  __main__.py  audit.py  checkers.py  report_types.py  scanner.py
app/legacy/plugins/: location_mission.py  photo_mission.py  registry.py
app/metadata/: metadata.py  validator.py
app/models/: adapter_utils.py  base.py  blip.py  clip.py  llm.py  model_registry.py  prompts.py  qwen_vl.py  siglip2.py
app/plugins/: base.py  location_mission.py  photo_mission.py  registry.py
app/prompts/: loader.py  middleware.py  registry.py
app/prompts/templates/: prompt_council_review.yaml  (+2 more)
app/security/: __init__.py  auth.py
app/services/: admin_service.py  answer_service.py  coupon_service.py  location_service.py  mission_service.py  mission_session_service.py
data/: answer.json  atmosphere_ground_truth_siglip2.json  coupons.json  current_answer.json  mission_sessions.json
docs/: BOOTSTRAP.md  PIPELINE_VISUALIZATION.md  PM_GUIDE.md  README.md  TASK_INDEX.md  admin-company-account-classification.md  api-specification.md  api_specification.md  architecture.md  bugfix-log.md  changelog.md  ci-cd-architecture.md  commercialization-plan.md  doc-guide.md  pipeline-visualization.md  refactor-audit.md
docs/benchmarks/: baseline-report.md  benchmark-template.md  siglip2-english-prompts.md  siglip2-v1-baseline.md
docs/templates/: TASK_SPEC_TEMPLATE.md
front/: download.ps1  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
front/src/: App.css  App.jsx  LegacyApp.jsx  index.css
migrations/: env.py
migrations/versions/: 20260425_0001_platform_foundation.py  20260426_0002_runtime_storage_parity.py
scripts/: README.md  debug_coupon_flow.py  simulate_cli.py  test_council_only.py  test_pipeline_mock.py  test_real_models.py  verify_components.py
scripts/benchmarks/: benchmark_atmosphere.py  benchmark_siglip.py
scripts/debug/: debug_hint_flow.py  simulate_atmosphere_feedback.py  test_image_atmosphere.py  test_pipeline_mock.py  test_reentry_logic.py  verify_reset_logic.py
scripts/legacy/: legacy_cli_simulation.py
scripts/tools/: analyze_pino_atmosphere.py  generate_atmosphere_report.py  rename_assets.py  supabase_db_apply.py  supabase_runtime_verify.py  unit_test_reset.py  update_atmosphere_ground_truth.py
supabase/: config.toml
supabase/migrations/: 20260425000100_platform_foundation.sql  20260426000200_runtime_storage_parity.sql
supabase/sql/: manual_apply_pazule_schema.sql
tests/: README.md  TDD_VALIDATION_PLAN.md  conftest.py  test_coupon_service.py  test_docs_audit.py  test_nodes_logic.py
tests/api/: test_admin_routes.py  test_routes.py
tests/core/: test_atmosphere_logic.py  test_config_import.py  test_constants.py  test_coupon_constants_usage.py  test_keyword.py  test_platform_settings.py  test_settings.py
tests/council/: test_aggregator.py  test_aggregator_tiered.py  test_deliberation.py  test_deliberation_node.py  test_judges.py  test_nodes.py  test_nodes_branches.py  test_nodes_helpers.py  test_pipeline_integration.py  test_retry_hint.py
tests/db/: test_repositories.py  test_session.py
tests/legacy/: test_mission_service.py  test_plugins.py
tests/metadata/: test_metadata.py  test_metadata_extraction.py  test_validator_refactor.py
tests/models/: test_adapter_utils.py  test_blip.py  test_llm.py  test_model_interfaces.py  test_model_registry.py  test_prompts.py  test_qwen_vl.py  test_siglip2.py
tests/prompts/: test_loader.py  test_middleware.py  test_registry.py
tests/security/: test_auth.py  test_auth_demo.py
tests/services/: test_admin_service.py  test_answer_service.py  test_coupon_service_extended.py  test_hint_static.py  test_location_service.py  test_mission_session_service.py
tests/tools/: test_supabase_runtime_verify.py
(+89 files in other folders)
